--- a/playground/src/assets/styles/common.css
+++ b/playground/src/assets/styles/common.css
@@ -75,3 +75,17 @@ html {
 .ant-doc-main-sider-menu.ant-menu-inline > .ant-menu-item {
   padding-inline: 36px 12px !important;
 }
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
+
+::view-transition-old(root) {
+  z-index: 1;
+}
+
+::view-transition-new(root) {
+  z-index: 9999;
+}
